--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "express": "4.21.2",
+    "handlebars": "^4.7.8",
     "multer": "^1.4.5-lts.1",
     "uuid": "^11.0.5"
   }
