--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch src/index.js",
-    "dev": "node --watch src/index.js"
+    "start": "node --watch src/server.js",
+    "dev": "node --watch src/server.js"
   },
   "keywords": [],
   "author": "",
