--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "description": "",
   "dependencies": {
     "bulma": "^1.0.3",
+    "dotenv": "^16.4.7",
     "express": "4.21.2",
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.5"
