--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.1",
     "bulma": "^1.0.3",
     "dotenv": "^16.4.7",
     "express": "4.21.2",
