--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
+    "paginate": "^0.2.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.5"
   }
