--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "handlebars": "^4.7.8",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
+    "mongoose-paginate": "^5.0.3",
     "mongoose-paginate-v2": "^1.9.0",
     "multer": "^1.4.5-lts.1",
     "paginate": "^0.2.0",
