--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.1",
+    "bcryptjs": "^3.0.2",
     "bulma": "^1.0.3",
     "dotenv": "^16.4.7",
     "express": "4.21.2",
     "express-handlebars": "^8.0.1",
+    "express-validator": "^7.2.1",
     "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "mongoose-paginate-v2": "^1.9.0",
