--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "express": "4.21.2",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
@@ -27,6 +28,9 @@
     "mongoose-paginate-v2": "^1.9.0",
     "multer": "^1.4.5-lts.1",
     "paginate": "^0.1.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.5"
   }
