--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch src/server.js",
-    "dev": "node --watch src/server.js"
+    "dev": "node --inspect ./src/server.js",
+    "legacy-dev": "node --inspect-brk ./src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +32,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "zod": "^3.24.2"
   }
 }
