--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.8.1",
+    "axios": "^1.8.4",
+    "axios-cookiejar-support": "^5.0.5",
     "bcryptjs": "^3.0.2",
     "bulma": "^1.0.3",
     "dotenv": "^16.4.7",
@@ -32,6 +33,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.1",
+    "tough-cookie": "^5.1.2",
     "uuid": "^11.0.5",
     "zod": "^3.24.2"
   }
