--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios-cookiejar-support": "^5.0.5",
     "bcryptjs": "^3.0.2",
     "bulma": "^1.0.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "4.21.2",
     "express-handlebars": "^8.0.1",
