--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^7.2.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "mongoose-paginate-v2": "^1.9.0",
